--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     --secondary-text-color: #b0b0b0;
     --accent-color: #00aaff;
     --highlight-color: #ffcc00;
-    --red-color: #ff4d4d;
-    --green-color: #4CAF50;
+    --red-color: #c02b2b;
+    --green-color: #2a7e2d;
     --border-color: #444;
     --font-family: 'Inter', sans-serif;
 }
@@ -348,12 +348,12 @@ a:hover {
 
 .analysis-table th:first-child,
 .analysis-table td:first-child {
-    width: 25%;
+    width: 20%;
 }
 
 .analysis-table th:last-child,
 .analysis-table td:last-child {
-    width: 75%;
+    width: 80%;
 }
 
 
@@ -367,9 +367,8 @@ a:hover {
 }
 
 .stat-value {
-    padding: 0.2em 0.5em;
+    padding: 0 0.5em;
     border-radius: 3px;
-    margin-right: 0.5em;
     margin-bottom: 0.3em;
     display: inline-block;
     font-size: 0.9em;
@@ -411,12 +410,12 @@ a:hover {
 
 .character-list-tooltip {
     font-size: 0.9rem;
-    margin-top: 0.75rem;
-    padding: 0.75rem;
+    margin-top: 0.5rem;
+    /* padding: 0.75rem;
     background-color: #252525;
     border-radius: 4px;
-    border: 1px solid var(--border-color);
-    max-height: 200px;
+    border: 1px solid var(--border-color); */
+    max-height: 256px;
     overflow-y: auto;
 }
 
@@ -425,9 +424,10 @@ a:hover {
     padding: 0.25rem 0.5rem;
     margin: 0.25rem;
     border-radius: 3px;
-    background-color: var(--bg-color);
+    background-color: #252525;
     display: inline-block;
     border: 1px solid var(--border-color);
+    transition: background-color 0.2s ease;
 }
 
 .character-list-tooltip a:hover {
@@ -474,12 +474,14 @@ a:hover {
         table-layout: auto;
     }
 
+    /*
     .analysis-table th:first-child,
     .analysis-table td:first-child,
     .analysis-table th:last-child,
     .analysis-table td:last-child {
         width: auto;
     }
+    */
 
 }
 
