Match the substat table design to the main stat

--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ a:hover {
 .stat-unused {
     background-color: var(--red-color);
     color: white;
-    text-decoration: line-through;
+    /* text-decoration: line-through; */
 }
 
 
