--- a/style.css
+++ b/style.css
@@ -320,18 +320,32 @@ a:hover {
     font-size: 0.95rem;
 }
 
+.stat-group ul li:last-child {
+    margin-bottom: 0
+}
+
 .stat-group ul li strong {
     color: var(--secondary-text-color);
 }
 
+.relic-option-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 4px;
+}
+
 .set-name-link {
+    min-width: 50%;
+}
+
+.set-name-link a {
     display: inline-flex;
     align-items: center;
     color: var(--accent-color);
     vertical-align: middle;
 }
 
-.set-name-link:hover {
+.set-name-link a:hover {
     text-decoration: underline;
 }
 
@@ -501,9 +515,14 @@ a:hover {
         margin-bottom: 0.5rem;
     }
 
+    .page-title-with-icon {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     .page-main-icon {
-        width: 3.6rem;
-        height: 3.6rem;
+        width: 6rem;
+        height: 6rem;
     }
 
     .build-grid,
