--- a/style.css
+++ b/style.css
@@ -537,6 +537,9 @@ footer {
 }
 
 .relic-interactive-filter-area {
+  display: grid;
+  grid-template-columns: minmax(300px, 40%) 1fr;
+  gap: 0.75rem;
   margin-top: 2rem;
   padding-top: 1.5rem;
   border-top: 1px solid var(--border-color);
@@ -544,20 +547,23 @@ footer {
 
 .relic-interactive-filter-area>h3 {
   /* Direct child h3 */
-  margin-bottom: 0.5rem;
+  grid-area: 1 / 1 / 2 / 3;
+  margin-bottom: 0;
   font-size: 1.6rem;
   color: var(--highlight-color);
 }
 
 .relic-interactive-filter-area>p {
   /* Direct child p for intro text */
-  margin-bottom: 1.5rem;
+  grid-area: 2 / 1 / 3 / 3;
+  margin-bottom: 0.5rem;
   font-size: 0.9rem;
   color: var(--secondary-text-color);
 }
 
 .filter-controls-panel {
-  margin-bottom: 1.5rem;
+  grid-area: 3 / 1 / 4 / 2;
+  align-self: start;
   padding: 1rem;
   background-color: var(--bg-color);
   border: 1px solid var(--border-color);
@@ -614,8 +620,8 @@ footer {
 .stat-options-grid {
   display: grid;
   gap: 0.5rem;
-  /* Default: min 25% width, allowing up to 4 items. Will be overridden in mobile. */
-  grid-template-columns: repeat(auto-fill, minmax(calc(25% - 0.5rem), 1fr));
+  /* Up to 2 items per row for stat options */
+  grid-template-columns: repeat(auto-fill, minmax(calc(50% - 0.5rem), 1fr));
 }
 
 .stat-option {
@@ -738,6 +744,7 @@ footer {
 
 #reset-filters-btn {
   background-color: var(--red-color);
+  width: 100%;
 }
 
 #reset-filters-btn:hover {
@@ -746,11 +753,11 @@ footer {
 }
 
 .filtered-results-section {
-  margin-top: 1.5rem;
+  grid-area: 3 / 2 / 4 / 3;
 }
 
 .filtered-results-section h4 {
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
   font-size: 1.1rem;
 }
 
@@ -765,8 +772,12 @@ footer {
 /* --- Character List Specific Grid --- */
 .item-list-scroll-container.character-list .item-grid-list {
   display: grid;
-  gap: 1.25rem;
+  gap: 0.75rem;
   grid-template-columns: repeat(auto-fill, minmax(6rem, 1fr));
+}
+
+.item-list-scroll-container.character-list.full-page-list .item-grid-list {
+  gap: 1.25rem;
 }
 
 .item-list-scroll-container.character-list .item-grid-list li a {
@@ -846,13 +857,12 @@ footer {
     grid-template-columns: 1fr;
   }
 
-  .relic-interactive-filter-area h3 {
-    font-size: 1.4rem;
+  .relic-interactive-filter-area {
+    grid-template-columns: 1fr;
   }
 
-  .stat-options-grid {
-    /* Up to 2 items per row for stat options */
-    grid-template-columns: repeat(auto-fill, minmax(calc(50% - 0.5rem), 1fr));
+  .relic-interactive-filter-area h3 {
+    font-size: 1.4rem;
   }
 
   .stat-option {
@@ -873,6 +883,15 @@ footer {
     /* Adjust gap for vertical stacking */
     margin-top: 0.5rem;
     width: 100%;
+  }
+
+  .filter-controls-panel {
+    grid-area: 3 / 1 / 4 / 3;
+    margin-bottom: 1rem;
+  }
+
+  .filtered-results-section {
+    grid-area: 4 / 1 / 4 / 3;
   }
 
   .item-list-scroll-container.character-list .item-grid-list {
