--- a/style.css
+++ b/style.css
@@ -328,11 +328,14 @@ footer {
 }
 
 .search-results-container h3 {
+  position: sticky;
+  top: 0;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0.3rem;
   font-size: 1.1rem;
   color: var(--highlight-color);
+  background-color: var(--surface-color);
   border-bottom: 1px solid var(--border-color);
 }
 
